# mysqldataclass

./: README.md  pyproject.toml  setup.cfg  setup.py
src/classes/: baseclass.py  manufacturingorder.py  part.py  purchaseorder.py
tests/: baseclasstest.py  manufacturingordertest.py  purchaseordertest.py
