[metadata]
name = mysql-data-class-XEONZENN@OUTLOOK.COM
version = 0.0.1
author = Keith Jones
author_email = keithwj1@gmail.com
description = Allows easy creation of data objects from a database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XeonZenn/MeggittProjects
project_urls =
    Bug Tracker = https://github.com/XeonZenn/MeggittProjects/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src